--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   shared_preferences: ^2.0.15
   responsive_framework: ^0.2.0
   dio: ^4.0.6
-  json_annotation: ^4.6.0
+  configurable_expansion_tile_null_safety: ^2.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
