--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   responsive_framework: ^0.2.0
   dio: ^4.0.6
   configurable_expansion_tile_null_safety: ^2.0.3
+  url_launcher: ^6.1.5
+  marquee: ^2.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
