--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.1 <3.0.0"
+  sdk: ">=2.18.4 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,32 +35,31 @@ dependencies:
   tree_view: ^0.0.6
   log4f: ^0.0.3
   fluro: ^2.0.3
-  flutter_markdown: ^0.6.10+3
+  flutter_markdown: ^0.6.13
   shared_preferences: ^2.0.15
   responsive_framework: ^0.2.0
   dio: ^4.0.6
-  url_launcher: ^6.1.5
+  url_launcher: ^6.1.6
   marquee: ^2.2.3
   flutter_breadcrumb: ^1.0.1
   crypto: ^3.0.2
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  json_serializable: ^6.3.1
-  build_runner: ^2.2.0
+  json_serializable: ^6.5.4
+  build_runner: ^2.3.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
