--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
     sdk: flutter
   universal_html: ^2.0.8
   tree_view: ^0.0.6
-  log4f: ^0.0.3
+  logging: ^1.1.0
   fluro: ^2.0.3
   flutter_markdown: ^0.6.13
   shared_preferences: ^2.0.15
